Fix label styling in exercise-index (#95)
* fix label styling in exercises

* fix overlapping labels

--- a/app/assets/stylesheets/exercises.scss
+++ b/app/assets/stylesheets/exercises.scss
@@ -591,3 +591,11 @@ input[type="radio"]:checked+label {
   -o-transition: all .8s ease;
   transition: all .8s ease;
 }
+
+.more-btn-wrapper[style*='display: none'] ~ .labels {
+  margin-top: 5px;
+}
+
+.exercise-panel {
+  min-height: 155px;
+}
